# stabby

./: .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  conanfile.txt  make.bat
.github/workflows/: cmake-multi-platform.yml
assets/maps/: default.json
profiles/: macos.profile
src/editor/: CMakeLists.txt  editor.h  main.cpp  map.cpp  map.h
src/engine/: CMakeLists.txt  ecs.h  engine.cpp  engine.h  game_timer.cpp  game_timer.h  utils.h
src/engine/assets/: asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h  assets.h
src/engine/async/: async.h  spsc_queue.h  thread_pool.cpp  thread_pool.h
src/engine/audio/: audio.cpp  audio.h  audio_engine.cpp  audio_engine.h  audio_file.cpp  audio_file.h  audio_manager.h  audio_queue.cpp  audio_queue.h  audio_system.cpp
src/engine/gui/: dialogs.h  portable-file-dialogs.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/rendering/: camera_2d.cpp  camera_2d.h  fonts.cpp  fonts.h  renderer_2d.cpp  renderer_2d.h  rendering.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/engine/rendering/fonts/: font.cpp  font.h  font_system.cpp  font_system.h  fonts.h
src/engine/rendering/sdl/: wrapper.h
src/engine/scene/: scene.cpp  scene.h
src/engine/time/: game_timer.cpp  game_timer.h
src/engine/world/: ecs.cpp  ecs.h  map.h  quadtree.cpp  quadtree.h  world.h
src/engine/world/map/: map.cpp  map.h  serialization.h  tile.cpp  tile.h
src/game/: CMakeLists.txt  game.h  main.cpp
